remove @include ouiCodeFont to fix scrollbar

--- a/src/plugins/discover/public/application/components/data_grid/_data_grid_table.scss
+++ b/src/plugins/discover/public/application/components/data_grid/_data_grid_table.scss
@@ -1,9 +1,9 @@
 .discoverDataGrid {
   // stylelint-disable-next-line @osd/stylelint/no_modifying_global_selectors
   .euiDataGrid__content {
-    @include ouiCodeFont;
+    // @include ouiCodeFont;
 
-    font-size: 12px;
+    font-size: 14px;
   }
 
   // stylelint-disable-next-line @osd/stylelint/no_modifying_global_selectors
